chore: added dummy text to html to help visualize dashboard

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <header>
+        <p>This is the header</p>
+    </header>
+    <aside>
+        <p>This is the sidebar</p>
+    </aside>
+    <main>
+        <p>This is the main bar</p>
+    </main>
 </body>
 </html>
